[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ossm_suite"
version = "0.1.0"
description = "Open Source Sensorimotor Modeling Suite."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0" }
authors = [
  { name = "Tonio Weidler", email = "t.weidler@maastrichtuniversity.nl" },
  { name = "Mario Senden", email = "mario.senden@maastrichtuniversity.nl" }
]
keywords = ["computational neuroscience", "sensorimotor", "standards", "open science"]

dependencies = [
    "ossm_base",
    "ossm_tasks",
    "ossm_lab",
    "ossm_models"
]

[project.urls]
Homepage = "https://github.com/ossm-team/ossm-suite"
Issues = "https://github.com/ossm-team/ossm-suite/issues"
